<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="writeToLogCat"
        android:text="@string/write_to_logcat"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="showToastMessage"
        android:text="@string/show_toast_message"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="showXMLToast"
        android:text="@string/show_toast_from_xml"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/write_to_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="@string/something_will_be_written_here"
        android:textSize="20sp" />

    <Button
        android:id="@+id/write_sth_to_edittext_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="writeToEditText"
        android:text="@string/write_something_to_edittext"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_value_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="@string/write_something_here"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/user_value_write_to_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:hint="@string/something_will_be_written_here"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="copyUserValueToEditText"
        android:text="@string/copy_user_value_to_edit_text"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>