<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/given_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/waga"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/given_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wzrost"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="50dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="@color/black"
            android:backgroundTint="#BF360C"
            android:layout_marginTop="40dp"
            android:onClick="calculateBmi"/>

        <ImageView
            android:id="@+id/healthIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>

